# clip2preview

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  parser.rs  preview.rs
tests/: integration.rs
