[package]
name = "clip2preview"
version = "0.1.0"
edition = "2024"
description = "A Rust crate for extracting embedded preview images from .clip files."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/clip2preview"
keywords = ["clip", "preview", "thumbnail", "sqlite"]
categories = ["multimedia::images", "parser-implementations"]

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled", "serialize"] }

[dev-dependencies]
tempfile = "3.27.0"
